--- a/calc_linguistic_features.ipynb
+++ b/calc_linguistic_features.ipynb
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1068/1526735988.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/tmp/ipykernel_497/3439606492.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  essays['ChatGPT-4'] = essays['ChatGPT-4'].str.replace(r'Title:.*\\n\\r\\n', '')\n"
      ]
     }
@@ -42,14 +42,14 @@
     "\n",
     "# Preprocesses data with spaCy for later use\n",
     "\n",
-    "essays[\"STUDspacy\"] = essays[\"Student\"].apply(lambda x: nlp(x))\n",
-    "essays[\"STUDlemma\"] = essays[\"STUDspacy\"].apply(lambda x: \" \".join([y.lemma_ for y in x]))\n",
+    "essays[\"STUD_spacy\"] = essays[\"Student\"].apply(lambda x: nlp(x))\n",
+    "essays[\"STUD_lemma\"] = essays[\"STUD_spacy\"].apply(lambda x: \" \".join([y.lemma_ for y in x]))\n",
     "\n",
-    "essays[\"GPT3spacy\"] = essays[\"ChatGPT-3\"].apply(lambda x: nlp(x))\n",
-    "essays[\"GPT3lemma\"] = essays[\"GPT3spacy\"].apply(lambda x: \" \".join([y.lemma_ for y in x]))\n",
+    "essays[\"GPT3_spacy\"] = essays[\"ChatGPT-3\"].apply(lambda x: nlp(x))\n",
+    "essays[\"GPT3_lemma\"] = essays[\"GPT3_spacy\"].apply(lambda x: \" \".join([y.lemma_ for y in x]))\n",
     "\n",
-    "essays[\"GPT4spacy\"] = essays[\"ChatGPT-4\"].apply(lambda x: nlp(x))\n",
-    "essays[\"GPT4lemma\"] = essays[\"GPT4spacy\"].apply(lambda x: \" \".join([y.lemma_ for y in x]))"
+    "essays[\"GPT4_spacy\"] = essays[\"ChatGPT-4\"].apply(lambda x: nlp(x))\n",
+    "essays[\"GPT4_lemma\"] = essays[\"GPT4_spacy\"].apply(lambda x: \" \".join([y.lemma_ for y in x]))"
    ]
   },
   {
@@ -67,10 +67,9 @@
     "        i += 1\n",
     "    return i\n",
     "\n",
-    "essays[\"STUDsent_count\"] = essays[\"STUDspacy\"].apply(lambda x: num_of_sent(x))\n",
-    "essays[\"GPT3sent_count\"] = essays[\"GPT3spacy\"].apply(lambda x: num_of_sent(x))\n",
-    "essays[\"GPT4sent_count\"] = essays[\"GPT3spacy\"].apply(lambda x: num_of_sent(x))\n",
-    "#essays"
+    "essays[\"STUD_sent_count\"] = essays[\"STUD_spacy\"].apply(lambda x: num_of_sent(x))\n",
+    "essays[\"GPT3_sent_count\"] = essays[\"GPT3_spacy\"].apply(lambda x: num_of_sent(x))\n",
+    "essays[\"GPT4_sent_count\"] = essays[\"GPT3_spacy\"].apply(lambda x: num_of_sent(x))"
    ]
   },
   {
@@ -86,10 +85,9 @@
     "    count = len(text.split())\n",
     "    return count\n",
     "\n",
-    "essays[\"STUDword_count\"] = essays[\"Student\"].apply(lambda x: num_of_words(x))\n",
-    "essays[\"GPT3word_count\"] = essays[\"ChatGPT-3\"].apply(lambda x: num_of_words(x))\n",
-    "essays[\"GPT4word_count\"] = essays[\"ChatGPT-4\"].apply(lambda x: num_of_words(x))       \n",
-    "#np.mean(essays[\"GPT3word_count\"])"
+    "essays[\"STUD_word_count\"] = essays[\"Student\"].apply(lambda x: num_of_words(x))\n",
+    "essays[\"GPT3_word_count\"] = essays[\"ChatGPT-3\"].apply(lambda x: num_of_words(x))\n",
+    "essays[\"GPT4_word_count\"] = essays[\"ChatGPT-4\"].apply(lambda x: num_of_words(x))       "
    ]
   },
   {
@@ -141,15 +139,14 @@
     "        return depth\n",
     "\n",
     "\n",
-    "essays[\"STUDsent_complex_tags\"] = essays[\"Student\"].apply(lambda x: calculate_dep_score(x))\n",
-    "essays[\"STUDsent_complex_depth\"] = essays[\"Student\"].apply(lambda x: calculate_dep_length(x))\n",
+    "essays[\"STUD_sent_complex_tags\"] = essays[\"Student\"].apply(lambda x: calculate_dep_score(x))\n",
+    "essays[\"STUD_sent_complex_depth\"] = essays[\"Student\"].apply(lambda x: calculate_dep_length(x))\n",
     "\n",
-    "essays[\"GPT3sent_complex_tags\"] = essays[\"ChatGPT-3\"].apply(lambda x: calculate_dep_score(x))\n",
-    "essays[\"GPT3sent_complex_depth\"] = essays[\"ChatGPT-3\"].apply(lambda x: calculate_dep_length(x))\n",
+    "essays[\"GPT3_sent_complex_tags\"] = essays[\"ChatGPT-3\"].apply(lambda x: calculate_dep_score(x))\n",
+    "essays[\"GPT3_sent_complex_depth\"] = essays[\"ChatGPT-3\"].apply(lambda x: calculate_dep_length(x))\n",
     "\n",
-    "essays[\"GPT4sent_complex_tags\"] = essays[\"ChatGPT-4\"].apply(lambda x: calculate_dep_score(x))\n",
-    "essays[\"GPT4sent_complex_depth\"] = essays[\"ChatGPT-4\"].apply(lambda x: calculate_dep_length(x))\n",
-    "#essays"
+    "essays[\"GPT4_sent_complex_tags\"] = essays[\"ChatGPT-4\"].apply(lambda x: calculate_dep_score(x))\n",
+    "essays[\"GPT4_sent_complex_depth\"] = essays[\"ChatGPT-4\"].apply(lambda x: calculate_dep_length(x))"
    ]
   },
   {
@@ -178,8 +175,7 @@
     "\n",
     "essays[\"STUD_LD\"] = essays[\"Student\"].apply(lambda x: calculate_lex_richness_MTLD2(x))\n",
     "essays[\"GPT3_LD\"] = essays[\"ChatGPT-3\"].apply(lambda x: calculate_lex_richness_MTLD2(x))\n",
-    "essays[\"GPT4_LD\"] = essays[\"ChatGPT-4\"].apply(lambda x: calculate_lex_richness_MTLD2(x))\n",
-    "#essays"
+    "essays[\"GPT4_LD\"] = essays[\"ChatGPT-4\"].apply(lambda x: calculate_lex_richness_MTLD2(x))"
    ]
   },
   {
@@ -194,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "dd52af63",
    "metadata": {},
    "outputs": [],
@@ -215,10 +211,9 @@
     "            i += text.count(marker[1])\n",
     "    return i\n",
     "\n",
-    "essays[\"STUDdiscourse\"] = essays[\"STUDlemma\"].apply(lambda x: count_discourse_markers(x))\n",
-    "essays[\"GPT3discourse\"] = essays[\"GPT3lemma\"].apply(lambda x: count_discourse_markers(x))\n",
-    "essays[\"GPT4discourse\"] = essays[\"GPT4lemma\"].apply(lambda x: count_discourse_markers(x))\n",
-    "#essays"
+    "essays[\"STUD_discourse\"] = essays[\"STUD_lemma\"].apply(lambda x: count_discourse_markers(x))\n",
+    "essays[\"GPT3_discourse\"] = essays[\"GPT3_lemma\"].apply(lambda x: count_discourse_markers(x))\n",
+    "essays[\"GPT4_discourse\"] = essays[\"GPT4_lemma\"].apply(lambda x: count_discourse_markers(x))"
    ]
   },
   {
@@ -233,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "064aa75a",
    "metadata": {
     "collapsed": true
@@ -253,44 +248,41 @@
     "            counter += text.count(modal[1])\n",
     "    return counter\n",
     "\n",
-    "essays[\"STUDmodals1\"] = essays[\"STUDlemma\"].apply(lambda x: count_total_modals(x))\n",
-    "essays[\"GPT3modals1\"] = essays[\"GPT3lemma\"].apply(lambda x: count_total_modals(x))\n",
-    "essays[\"GPT4modals1\"] = essays[\"GPT4lemma\"].apply(lambda x: count_total_modals(x))\n",
-    "#essays"
+    "essays[\"STUD_modals1\"] = essays[\"STUD_lemma\"].apply(lambda x: count_total_modals(x))\n",
+    "essays[\"GPT3_modals1\"] = essays[\"GPT3_lemma\"].apply(lambda x: count_total_modals(x))\n",
+    "essays[\"GPT4_modals1\"] = essays[\"GPT4_lemma\"].apply(lambda x: count_total_modals(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1814edca",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Counts the number of modals using POS tagging\n",
     "\n",
-    "essays[\"STUDpos\"] = essays[\"STUDspacy\"].apply(lambda x: \" \".join([y.tag_ for y in x]))\n",
-    "essays[\"GPT3pos\"] = essays[\"GPT3spacy\"].apply(lambda x: \" \".join([y.tag_ for y in x]))\n",
-    "essays[\"GPT4pos\"] = essays[\"GPT4spacy\"].apply(lambda x: \" \".join([y.tag_ for y in x]))\n",
+    "essays[\"STUD_pos\"] = essays[\"STUD_spacy\"].apply(lambda x: \" \".join([y.tag_ for y in x]))\n",
+    "essays[\"GPT3_pos\"] = essays[\"GPT3_spacy\"].apply(lambda x: \" \".join([y.tag_ for y in x]))\n",
+    "essays[\"GPT4_pos\"] = essays[\"GPT4_spacy\"].apply(lambda x: \" \".join([y.tag_ for y in x]))\n",
     "\n",
-    "essays[\"STUDmodals2\"] = essays[\"STUDpos\"].str.count(r'MD')\n",
-    "essays[\"GPT3modals2\"] = essays[\"GPT3pos\"].str.count(r'MD')\n",
-    "essays[\"GPT4modals2\"] = essays[\"GPT4pos\"].str.count(r'MD')\n",
-    "#essays"
+    "essays[\"STUD_modals2\"] = essays[\"STUD_pos\"].str.count(r'MD')\n",
+    "essays[\"GPT3_modals2\"] = essays[\"GPT3_pos\"].str.count(r'MD')\n",
+    "essays[\"GPT4_modals2\"] = essays[\"GPT4_pos\"].str.count(r'MD')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1c1132c6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculates total number of modals per essay\n",
     "\n",
-    "essays[\"STUDmodals_all\"] = essays[\"STUDmodals2\"] + essays[\"STUDmodals1\"]\n",
-    "essays[\"GPT3modals_all\"] = essays[\"GPT3modals2\"] + essays[\"GPT3modals1\"]\n",
-    "essays[\"GPT4modals_all\"] = essays[\"GPT4modals2\"] + essays[\"GPT4modals1\"]\n",
-    "#essays"
+    "essays[\"STUD_modals_all\"] = essays[\"STUD_modals2\"] + essays[\"STUD_modals1\"]\n",
+    "essays[\"GPT3_modals_all\"] = essays[\"GPT3_modals2\"] + essays[\"GPT3_modals1\"]\n",
+    "essays[\"GPT4_modals_all\"] = essays[\"GPT4_modals2\"] + essays[\"GPT4_modals1\"]"
    ]
   },
   {
@@ -305,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2758a91a",
    "metadata": {},
    "outputs": [],
@@ -333,8 +325,7 @@
     "\n",
     "essays[\"STUD_EpMarkers\"] = essays[\"Student\"].apply(lambda x: find_epistemic_markers(x))\n",
     "essays[\"GPT3_EpMarkers\"] = essays[\"ChatGPT-3\"].apply(lambda x: find_epistemic_markers(x))\n",
-    "essays[\"GPT4_EpMarkers\"] = essays[\"ChatGPT-4\"].apply(lambda x: find_epistemic_markers(x))\n",
-    "#essays"
+    "essays[\"GPT4_EpMarkers\"] = essays[\"ChatGPT-4\"].apply(lambda x: find_epistemic_markers(x))"
    ]
   },
   {
@@ -349,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "12205383",
    "metadata": {},
    "outputs": [],
@@ -365,15 +356,14 @@
     "    \n",
     "    return(len(nom_nouns))\n",
     "    \n",
-    "essays[\"STUDnominalisation\"] = essays[\"STUDspacy\"].apply(lambda x: nominalisation_counter(x))\n",
-    "essays[\"GPT3nominalisation\"] = essays[\"GPT3spacy\"].apply(lambda x: nominalisation_counter(x))\n",
-    "essays[\"GPT4nominalisation\"] = essays[\"GPT4spacy\"].apply(lambda x: nominalisation_counter(x))\n",
-    "#essays"
+    "essays[\"STUD_nominalisation\"] = essays[\"STUD_spacy\"].apply(lambda x: nominalisation_counter(x))\n",
+    "essays[\"GPT3_nominalisation\"] = essays[\"GPT3_spacy\"].apply(lambda x: nominalisation_counter(x))\n",
+    "essays[\"GPT4_nominalisation\"] = essays[\"GPT4_spacy\"].apply(lambda x: nominalisation_counter(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "5935b64b",
    "metadata": {},
    "outputs": [],
@@ -384,27 +374,26 @@
     "    average = feature/sent\n",
     "    return(average)\n",
     "\n",
-    "essays[\"STUDdm_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"STUDdiscourse\"], row[\"STUDsent_count\"]), axis=1)\n",
-    "essays[\"GPT3dm_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT3discourse\"], row[\"GPT3sent_count\"]), axis=1)\n",
-    "essays[\"GPT4dm_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT4discourse\"], row[\"GPT4sent_count\"]), axis=1)\n",
+    "essays[\"STUD_dm_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"STUD_discourse\"], row[\"STUD_sent_count\"]), axis=1)\n",
+    "essays[\"GPT3_dm_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT3_discourse\"], row[\"GPT3_sent_count\"]), axis=1)\n",
+    "essays[\"GPT4_dm_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT4_discourse\"], row[\"GPT4_sent_count\"]), axis=1)\n",
     "\n",
-    "essays[\"STUDmod_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"STUDmodals_all\"], row[\"STUDsent_count\"]), axis=1)\n",
-    "essays[\"GPT3mod_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT3modals_all\"], row[\"GPT3sent_count\"]), axis=1)\n",
-    "essays[\"GPT4mod_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT4modals_all\"], row[\"GPT4sent_count\"]), axis=1)\n",
+    "essays[\"STUD_mod_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"STUD_modals_all\"], row[\"STUD_sent_count\"]), axis=1)\n",
+    "essays[\"GPT3_mod_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT3_modals_all\"], row[\"GPT3_sent_count\"]), axis=1)\n",
+    "essays[\"GPT4_mod_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT4_modals_all\"], row[\"GPT4_sent_count\"]), axis=1)\n",
     "\n",
-    "essays[\"STUDep_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"STUD_EpMarkers\"], row[\"STUDsent_count\"]), axis=1)\n",
-    "essays[\"GPT3ep_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT3_EpMarkers\"], row[\"GPT3sent_count\"]), axis=1)\n",
-    "essays[\"GPT4ep_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT4_EpMarkers\"], row[\"GPT4sent_count\"]), axis=1)\n",
+    "essays[\"STUD_ep_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"STUD_EpMarkers\"], row[\"STUD_sent_count\"]), axis=1)\n",
+    "essays[\"GPT3_ep_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT3_EpMarkers\"], row[\"GPT3_sent_count\"]), axis=1)\n",
+    "essays[\"GPT4_ep_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT4_EpMarkers\"], row[\"GPT4_sent_count\"]), axis=1)\n",
     "\n",
-    "essays[\"STUDnom_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"STUDnominalisation\"], row[\"STUDsent_count\"]), axis=1)\n",
-    "essays[\"GPT3nom_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT3nominalisation\"], row[\"GPT3sent_count\"]), axis=1)\n",
-    "essays[\"GPT4nom_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT4nominalisation\"], row[\"GPT4sent_count\"]), axis=1)\n",
-    "#essays"
+    "essays[\"STUD_nom_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"STUD_nominalisation\"], row[\"STUD_sent_count\"]), axis=1)\n",
+    "essays[\"GPT3_nom_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT3_nominalisation\"], row[\"GPT3_sent_count\"]), axis=1)\n",
+    "essays[\"GPT4_nom_per_sent\"] = essays.apply(lambda row: average_per_sentence(row[\"GPT4_nominalisation\"], row[\"GPT4_sent_count\"]), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "240f35f7",
    "metadata": {},
    "outputs": [
@@ -456,14 +445,14 @@
    ],
    "source": [
     "print(\"Sentence complexity based on a number of certain dependency tags\")\n",
-    "print(\"Student:\", np.mean(essays[\"STUDsent_complex_tags\"]))\n",
-    "print(\"GPT3: \", np.mean(essays[\"GPT3sent_complex_tags\"]))\n",
-    "print(\"GPT4: \", np.mean(essays[\"GPT4sent_complex_tags\"]), \"\\n\")\n",
+    "print(\"Student:\", np.mean(essays[\"STUD_sent_complex_tags\"]))\n",
+    "print(\"GPT3: \", np.mean(essays[\"GPT3_sent_complex_tags\"]))\n",
+    "print(\"GPT4: \", np.mean(essays[\"GPT4_sent_complex_tags\"]), \"\\n\")\n",
     "\n",
     "print(\"Sentence complexity based on the tree depth\")\n",
-    "print(\"Student:\", np.mean(essays[\"STUDsent_complex_depth\"]))\n",
-    "print(\"GPT3: \", np.mean(essays[\"GPT3sent_complex_depth\"]))\n",
-    "print(\"GPT4: \", np.mean(essays[\"GPT4sent_complex_depth\"]), \"\\n\")\n",
+    "print(\"Student:\", np.mean(essays[\"STUD_sent_complex_depth\"]))\n",
+    "print(\"GPT3: \", np.mean(essays[\"GPT3_sent_complex_depth\"]))\n",
+    "print(\"GPT4: \", np.mean(essays[\"GPT4_sent_complex_depth\"]), \"\\n\")\n",
     "\n",
     "print(\"MTLD lexical diversity score\")\n",
     "print(\"GPT4:\", np.mean(essays[\"GPT4_LD\"]))\n",
@@ -471,19 +460,19 @@
     "print(\"Student: \", np.mean(essays[\"STUD_LD\"]), \"\\n\")\n",
     "\n",
     "print(\"Average number of discourse markers per essay\")\n",
-    "print(\"Student:\", np.mean(essays[\"STUDdiscourse\"]))\n",
-    "print(\"GPT3: \", np.mean(essays[\"GPT3discourse\"]))\n",
-    "print(\"GPT4: \", np.mean(essays[\"GPT4discourse\"]), \"\\n\")\n",
+    "print(\"Student:\", np.mean(essays[\"STUD_discourse\"]))\n",
+    "print(\"GPT3: \", np.mean(essays[\"GPT3_discourse\"]))\n",
+    "print(\"GPT4: \", np.mean(essays[\"GPT4_discourse\"]), \"\\n\")\n",
     "\n",
     "print(\"Average number of modals (from the list) per essay\")\n",
-    "print(\"Student:\", np.mean(essays[\"STUDmodals1\"]))\n",
-    "print(\"GPT3: \", np.mean(essays[\"GPT3modals1\"]))\n",
-    "print(\"GPT4: \", np.mean(essays[\"GPT4modals1\"]), \"\\n\")\n",
+    "print(\"Student:\", np.mean(essays[\"STUD_modals1\"]))\n",
+    "print(\"GPT3: \", np.mean(essays[\"GPT3_modals1\"]))\n",
+    "print(\"GPT4: \", np.mean(essays[\"GPT4_modals1\"]), \"\\n\")\n",
     "\n",
     "print(\"Average number of modals (POS-tags) per essay\")\n",
-    "print(\"Student:\", np.mean(essays[\"STUDmodals2\"]))\n",
-    "print(\"GPT3: \", np.mean(essays[\"GPT3modals2\"]))\n",
-    "print(\"GPT4: \", np.mean(essays[\"GPT4modals2\"]), \"\\n\")\n",
+    "print(\"Student:\", np.mean(essays[\"STUD_modals2\"]))\n",
+    "print(\"GPT3: \", np.mean(essays[\"GPT3_modals2\"]))\n",
+    "print(\"GPT4: \", np.mean(essays[\"GPT4_modals2\"]), \"\\n\")\n",
     "\n",
     "print(\"Average number of epistemic markers per essay\")\n",
     "print(\"Student:\", np.mean(essays[\"STUD_EpMarkers\"]))\n",
@@ -491,14 +480,14 @@
     "print(\"GPT4: \", np.mean(essays[\"GPT4_EpMarkers\"]), \"\\n\")\n",
     "\n",
     "print(\"Average number of nominalisations per essay\")\n",
-    "print(\"Student:\", np.mean(essays[\"STUDnominalisation\"]))\n",
-    "print(\"GPT3: \", np.mean(essays[\"GPT3nominalisation\"]))\n",
-    "print(\"GPT4: \", np.mean(essays[\"GPT4nominalisation\"]))"
+    "print(\"Student:\", np.mean(essays[\"STUD_nominalisation\"]))\n",
+    "print(\"GPT3: \", np.mean(essays[\"GPT3_nominalisation\"]))\n",
+    "print(\"GPT4: \", np.mean(essays[\"GPT4_nominalisation\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "cb4ca0e8",
    "metadata": {},
    "outputs": [],
@@ -509,7 +498,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -524,6 +513,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "657977a8e1cca15745b845f6b06b6c4354282a12f318ae778563a98fa73562e6"
+   }
   }
  },
  "nbformat": 4,
