update linguistic markers

--- a/calc_linguistic_features.ipynb
+++ b/calc_linguistic_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "330a454d",
    "metadata": {},
    "outputs": [],
@@ -23,22 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "38f6c617",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_497/3439606492.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  essays['ChatGPT-4'] = essays['ChatGPT-4'].str.replace(r'Title:.*\\n\\r\\n', '')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Removes the titles from ChatGPT 4 essays\n",
-    "essays['ChatGPT-4'] = essays['ChatGPT-4'].str.replace(r'Title:.*\\n\\r\\n', '')\n",
+    "essays['ChatGPT-4'] = essays['ChatGPT-4'].str.replace(r'Title:.*\\n\\r\\n', '', regex=True)\n",
     "\n",
     "# Preprocesses data with spaCy for later use\n",
     "\n",
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "bad396ac",
    "metadata": {},
    "outputs": [],
@@ -69,12 +60,12 @@
     "\n",
     "essays[\"STUD_sent_count\"] = essays[\"STUD_spacy\"].apply(lambda x: num_of_sent(x))\n",
     "essays[\"GPT3_sent_count\"] = essays[\"GPT3_spacy\"].apply(lambda x: num_of_sent(x))\n",
-    "essays[\"GPT4_sent_count\"] = essays[\"GPT3_spacy\"].apply(lambda x: num_of_sent(x))"
+    "essays[\"GPT4_sent_count\"] = essays[\"GPT4_spacy\"].apply(lambda x: num_of_sent(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "34021711",
    "metadata": {},
    "outputs": [],
@@ -107,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "54c97b9b",
    "metadata": {},
    "outputs": [],
@@ -161,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "755aa017",
    "metadata": {},
    "outputs": [],
@@ -190,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "dd52af63",
    "metadata": {},
    "outputs": [],
@@ -228,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "064aa75a",
    "metadata": {
     "collapsed": true
@@ -255,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "1814edca",
    "metadata": {},
    "outputs": [],
@@ -273,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "1c1132c6",
    "metadata": {},
    "outputs": [],
@@ -297,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "2758a91a",
    "metadata": {},
    "outputs": [],
@@ -340,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "12205383",
    "metadata": {},
    "outputs": [],
@@ -363,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "id": "5935b64b",
    "metadata": {},
    "outputs": [],
@@ -393,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "id": "240f35f7",
    "metadata": {},
    "outputs": [
@@ -487,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "cb4ca0e8",
    "metadata": {},
    "outputs": [],
